cluster/k8s/gatus/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
  namespace: gatus
  annotations:
    external-dns.alpha.kubernetes.io/hostname: status.allegedly.works
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: gateway-system
  hostnames:
    - "status.allegedly.works"
  rules:
    - backendRefs:
        - name: gatus
          port: 80
